-Jwt Authentication Complete -version Degraded from 0.12.6 ->0.11.5 -Updated AuthFilterToken -Implemented Login API -Implemented AuthController -Role Based Authentication is Working